Modificacion de los archivos en mi propia rama

--- a/prueba/index.html
+++ b/prueba/index.html
@@ -2,11 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Formulario Simple</title>
+    <title>Formulario Simple_1</title>
+    <!-- Modificado por Daniel -->
     <link rel="stylesheet" href="2.css">
 </head>
 <body>
-    <h1>Formulario de Contacto</h1>
+    <h1>Formulario de Contactos_1</h1>
+    <!-- Modificado por Daniel -->
     <form id="contactForm" action="4.php" method="POST">
         <label>Nombre:
             <input type="text" name="nombre" required>
